--- a/PMgo/itemWindow.xaml
+++ b/PMgo/itemWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PMgo.itemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="itemWindow" Height="586" Width="1104" WindowStartupLocation="CenterScreen" Background="#FFFDFDFD" WindowState="Maximized">
+        Title="itemWindow" Height="621.951" Width="1226.233" WindowStartupLocation="CenterScreen" Background="#FFFDFDFD">
     <Grid>
         <Image HorizontalAlignment="Left" Height="98" VerticalAlignment="Top" Width="157" Source="egi-consulting-project-management.jpg" RenderTransformOrigin="-0.226,0.407" Margin="986,0,0,0"/>
         <Button x:Name="submit_btn" Content="Save" HorizontalAlignment="Left" Height="34" Margin="13,509,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
@@ -38,7 +38,7 @@
         <Label Content="Start Date&#xD;&#xA;" HorizontalAlignment="Left" Height="39" Margin="18,198,0,0" VerticalAlignment="Top" Width="93" FontSize="18"/>
         <Label Content="End Date&#xA;" HorizontalAlignment="Left" Height="39" Margin="322,198,0,0" VerticalAlignment="Top" Width="85" FontSize="18"/>
         <Button Content="&lt;-Remove" HorizontalAlignment="Left" Margin="241,430,0,0" VerticalAlignment="Top" Width="97" Height="37" Click="Button_Click_1" FontSize="14" FontFamily="Segoe UI Semibold"/>
-        <TreeView x:Name="ItemTreeView" HorizontalAlignment="Left" Height="351" Margin="749,130,0,0" VerticalAlignment="Top" Width="314"/>
+        <TreeView x:Name="ItemTreeView" HorizontalAlignment="Left" Height="351" Margin="669,130,0,0" VerticalAlignment="Top" Width="442"/>
         <Button Content="Edit" HorizontalAlignment="Left" Height="34" Margin="13,509,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -48,7 +48,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="submit_btn_Copy1" Content="Create" HorizontalAlignment="Left" Height="34" Margin="931,509,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
+        <Button x:Name="submit_btn_Copy1" Content="Create" HorizontalAlignment="Left" Height="34" Margin="851,509,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="White" Offset="0"/>
@@ -75,16 +75,15 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <TextBlock x:Name="projNameBox" HorizontalAlignment="Left" Height="56" Margin="637,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="344" Text="Project Name"/>
+        <TextBlock x:Name="projNameBox" HorizontalAlignment="Left" Height="56" Margin="669,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="312" FontSize="36"/>
         <Label Content="Available Users&#xA;" HorizontalAlignment="Left" Height="39" Margin="78,299,0,0" VerticalAlignment="Top" Width="85" FontSize="18"/>
         <Label Content="Assigned&#xA;" HorizontalAlignment="Left" Height="39" Margin="408,299,0,0" VerticalAlignment="Top" Width="85" FontSize="18"/>
-        <ComboBox x:Name="CreateComboBox" HorizontalAlignment="Left" Margin="749,509,0,0" VerticalAlignment="Top" Width="176" Height="34" Text="Create" FontSize="18" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ToolTip="Create milestone, task or subtask" Tag="Create" SelectionChanged="ComboBox_SelectionChanged_1" Initialized="CreateComboBox_Initialized" >
+        <ComboBox x:Name="CreateComboBox" HorizontalAlignment="Left" Margin="669,509,0,0" VerticalAlignment="Top" Width="176" Height="34" Text="Create" FontSize="18" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ToolTip="Create milestone, task or subtask" Tag="Create" SelectionChanged="ComboBox_SelectionChanged_1" Initialized="CreateComboBox_Initialized" >
             <ComboBoxItem Content="Project Item" IsEnabled="False"/>
             <ComboBoxItem Content="Milestone" ToolTip="Add Milestone to current project"/>
             <ComboBoxItem Content="Task" ToolTip="Add task to current milestone"/>
             <ComboBoxItem Content="Subtask" ToolTip="Add subtask to current task"/>
         </ComboBox>
-        <Button x:Name="refresh" Content="Button" HorizontalAlignment="Left" Margin="637,430,0,0" VerticalAlignment="Top" Width="75" Click="refresh_Click"/>
 
     </Grid>
 </Window>
