--- a/PMgo/MainView.xaml
+++ b/PMgo/MainView.xaml
@@ -1,10 +1,8 @@
 ﻿<Window x:Class="PMgo.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainView" Height="580" Width="1150" WindowStartupLocation="CenterScreen">
+        Title="MainView" Height="580" Width="1150" WindowStartupLocation="CenterScreen" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
     <Grid>
-        <Image HorizontalAlignment="Left" Height="86" Margin="10,10,0,0" VerticalAlignment="Top" Width="106" Source="egi-consulting-project-management.jpg" RenderTransformOrigin="-0.226,0.407"/>
-        <TextBox x:Name="projectNameField" HorizontalAlignment="Left" Height="45" Margin="129,33,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="287" FontSize="22" FontFamily="Segoe UI Light" Text="" FontWeight="Bold"/>
         <Button Content="Manage Team Members" Margin="878,110,0,0" Width="172" Click="Button_Click_2" Height="43" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0"/>
         <Button Content="Add Menu" Margin="878,162,0,0" Width="172" Click="Button_Click_4" Height="43" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0"/>
         <Grid Margin="0,-39,0.333,39.333">
@@ -17,10 +15,15 @@
                     <DropShadowEffect/>
                 </ProgressBar.Effect>
             </ProgressBar>
-            <TextBlock x:Name="progressBar_txt" HorizontalAlignment="Left" Margin="390,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.484,0.377" Height="59" FontSize="20" FontWeight="Bold" Width="136" Panel.ZIndex="1"/>
+            <TextBlock x:Name="progressBar_txt" HorizontalAlignment="Left" Margin="352,158,0,0" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.475" Height="47" FontSize="20" FontWeight="Bold" Width="207" Panel.ZIndex="1" TextAlignment="Center" FontFamily="Segoe UI Light"/>
             <Button Content="Button" HorizontalAlignment="Left" Margin="917,347,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+            <TextBlock x:Name="projectNameField" HorizontalAlignment="Left" Height="52" Margin="236,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="455" FontSize="36" TextAlignment="Center"/>
         </Grid>
-        <TreeView x:Name="ProjectTreeView" HorizontalAlignment="Left" Height="290" Margin="190,222,0,0" VerticalAlignment="Top" Width="541"/>
+        <TreeView x:Name="ProjectTreeView" HorizontalAlignment="Left" Height="290" Margin="190,222,0,0" VerticalAlignment="Top" Width="541">
+            <TreeView.Effect>
+                <DropShadowEffect/>
+            </TreeView.Effect>
+        </TreeView>
         <Button x:Name="Refresh" Content="Refresh" Margin="878,212,0,0" Width="172" Click="Refresh_Click" Height="43" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0"/>
 
     </Grid>
