--- a/PMgo/MainWindow.xaml
+++ b/PMgo/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PMgo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="580" Width="1150" WindowStyle="ThreeDBorderWindow" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="580" Width="1150" WindowStyle="ThreeDBorderWindow" WindowStartupLocation="CenterScreen" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="8*"/>
@@ -11,19 +11,18 @@
             <ColumnDefinition Width="25*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <Image HorizontalAlignment="Left" Height="196" VerticalAlignment="Top" Width="238" Source="egi-consulting-project-management.jpg" Grid.ColumnSpan="2" Grid.Column="2"/>
-        <ListBox x:Name="projectField" HorizontalAlignment="Left" Height="199" Margin="48,213,0,0" VerticalAlignment="Top" Width="440" SelectionChanged="projectField_SelectionChanged" Background="#FFF5F7F7" Foreground="#FF0C0000" FontSize="14" Grid.Column="2" Grid.ColumnSpan="2">
+        <ListBox x:Name="projectField" HorizontalAlignment="Left" Height="199" Margin="48,213,0,0" VerticalAlignment="Top" Width="440" SelectionChanged="projectField_SelectionChanged" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Foreground="#FF0C0000" FontSize="16" Grid.Column="2" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" OpacityMask="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
             <ListBox.Effect>
                 <DropShadowEffect/>
             </ListBox.Effect>
         </ListBox>
-        <Label Content="Choose a Project" Grid.Column="3" HorizontalAlignment="Left" Margin="149,114,0,0" VerticalAlignment="Top" Width="306" Height="52" FontSize="36" FontFamily="Segoe UI Light"/>
+        <Label Content="Choose a Project" Grid.Column="3" HorizontalAlignment="Left" Margin="149,63,0,0" VerticalAlignment="Top" Width="306" Height="57" FontSize="36" FontFamily="Segoe UI Light"/>
         <Button Content="Add a New Project" Grid.Column="3" HorizontalAlignment="Left" Height="55" Margin="149,455,0,0" VerticalAlignment="Top" Width="327" Click="Button_Click_3" FontSize="36" FontFamily="Segoe UI Light">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <ListBox Grid.Column="3" HorizontalAlignment="Left" Height="199" Margin="332,213,0,0" VerticalAlignment="Top" Width="440">
+        <ListBox Grid.Column="3" HorizontalAlignment="Left" Height="199" Margin="332,213,0,0" VerticalAlignment="Top" Width="440" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}">
             <ListBox.Effect>
                 <DropShadowEffect/>
             </ListBox.Effect>
