--- a/PMgo/itemWindow.xaml
+++ b/PMgo/itemWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PMgo.itemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="itemWindow" Height="621.951" Width="1226.233" WindowStartupLocation="CenterScreen" Background="#FFFDFDFD">
+        Title="itemWindow" Height="621.951" Width="1226.233" WindowStartupLocation="CenterScreen" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
     <Grid>
         <Image HorizontalAlignment="Left" Height="98" VerticalAlignment="Top" Width="157" Source="egi-consulting-project-management.jpg" RenderTransformOrigin="-0.226,0.407" Margin="986,27,0,0"/>
         <Button x:Name="submit_btn" Content="Save" HorizontalAlignment="Left" Height="34" Margin="13,509,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
@@ -38,9 +38,13 @@
         <Label Content="Start Date&#xD;&#xA;" HorizontalAlignment="Left" Height="39" Margin="18,198,0,0" VerticalAlignment="Top" Width="93" FontSize="18"/>
         <Label Content="End Date&#xA;" HorizontalAlignment="Left" Height="39" Margin="322,198,0,0" VerticalAlignment="Top" Width="85" FontSize="18"/>
         <Button Content="&lt;-Remove" HorizontalAlignment="Left" Margin="241,430,0,0" VerticalAlignment="Top" Width="97" Height="37" Click="Button_Click_1" FontSize="14" FontFamily="Segoe UI Semibold"/>
-        <TreeView x:Name="ItemTreeView" HorizontalAlignment="Left" Height="351" Margin="669,130,0,0" VerticalAlignment="Top" Width="442" SelectedItemChanged="TreeView_OnSelectedItemChanged"/>      
-        
-            <Button Content="Edit" HorizontalAlignment="Left" Height="34" Margin="13,509,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
+        <TreeView x:Name="ItemTreeView" HorizontalAlignment="Left" Height="351" Margin="669,130,0,0" VerticalAlignment="Top" Width="442" SelectedItemChanged="TreeView_OnSelectedItemChanged" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
+            <TreeView.Effect>
+                <DropShadowEffect/>
+            </TreeView.Effect>
+        </TreeView>
+
+        <Button Content="Edit" HorizontalAlignment="Left" Height="34" Margin="13,509,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="White" Offset="0"/>
