--- a/PMgo/createSubtask.xaml
+++ b/PMgo/createSubtask.xaml
@@ -1,21 +1,21 @@
-﻿<Window x:Class="PMgo.createItem"
+﻿<Window x:Class="PMgo.createSubtask"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="createItem" Height="300" Width="300" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" WindowStartupLocation="CenterScreen">
+        Title="createSubtask" Height="300" Width="300" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button Content="Cancel" HorizontalAlignment="Left" Margin="64,232,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="28" Margin="98,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" TextChanged="nameBox_TextChanged"/>
+        <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="28" Margin="98,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
         <TextBox x:Name="descBox" HorizontalAlignment="Left" Height="57" Margin="98,106,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
         <DatePicker x:Name="startBox" HorizontalAlignment="Left" Margin="98,168,0,0" VerticalAlignment="Top"/>
         <DatePicker x:Name="endBox" HorizontalAlignment="Left" Margin="98,197,0,0" VerticalAlignment="Top"/>
         <Button Content="Create" HorizontalAlignment="Left" Margin="157,232,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
         <TextBlock x:Name="projectNameBox" HorizontalAlignment="Left" Height="28" TextWrapping="Wrap" VerticalAlignment="Top" Width="249" Margin="20,5,0,0" FontSize="18" TextAlignment="Center"/>
-        <Label Content="Task Name" HorizontalAlignment="Left" Margin="20,73,0,0" VerticalAlignment="Top"/>
+        <Label Content="Subtask Name" HorizontalAlignment="Left" Margin="12,73,0,0" VerticalAlignment="Top"/>
         <Label Content="Description" HorizontalAlignment="Left" Margin="20,106,0,0" VerticalAlignment="Top"/>
         <Label Content="Start Date" HorizontalAlignment="Left" Margin="20,168,0,0" VerticalAlignment="Top"/>
         <Label Content="End Date" HorizontalAlignment="Left" Margin="20,197,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="milestoneBox" HorizontalAlignment="Left" Margin="98,42,0,0" VerticalAlignment="Top" Width="168" Height="26"/>
-        <Label Content="Milestone" HorizontalAlignment="Left" Margin="21,42,0,0" VerticalAlignment="Top"/>
+        <Label Content="Task" HorizontalAlignment="Left" Margin="21,42,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="taskNameBox" HorizontalAlignment="Left" Height="28" Margin="98,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
 
     </Grid>
 </Window>
