--- a/PMgo/MainWindow.xaml
+++ b/PMgo/MainWindow.xaml
@@ -3,6 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="580" Width="1150" WindowStyle="ThreeDBorderWindow" WindowStartupLocation="CenterScreen" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FFBEDBEE" Offset="0.003"/>
+                <GradientStop Color="#FFBFDBEE" Offset="1"/>
+                <GradientStop Color="#FEEAE5EE" Offset="0.43"/>
+                <GradientStop Color="#FEF8F9F9" Offset="0.973"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="38*"/>
@@ -11,24 +19,38 @@
             <ColumnDefinition Width="25*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="projectField" HorizontalAlignment="Left" Height="199" Margin="48,213,0,0" VerticalAlignment="Top" Width="440" SelectionChanged="projectField_SelectionChanged" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Foreground="#FF0C0000" FontSize="16" Grid.Column="2" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" OpacityMask="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
+        <ListBox x:Name="projectField" HorizontalAlignment="Left" Height="199" Margin="48,213,0,0" VerticalAlignment="Top" Width="440" SelectionChanged="projectField_SelectionChanged" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Foreground="#FF0C0000" FontSize="22" Grid.Column="2" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" OpacityMask="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
             <ListBox.Effect>
                 <DropShadowEffect/>
             </ListBox.Effect>
         </ListBox>
-        <Label Content="Choose a Project" Grid.Column="3" HorizontalAlignment="Left" Margin="149,63,0,0" VerticalAlignment="Top" Width="306" Height="57" FontSize="36" FontFamily="Segoe UI Light"/>
+        <Label Content="Choose a Project" Grid.Column="3" HorizontalAlignment="Left" Margin="116,57,0,0" VerticalAlignment="Top" Width="387" Height="81" FontSize="48" FontFamily="Segoe UI Light">
+            <Label.Effect>
+                <DropShadowEffect Color="#FFF7F1F1"/>
+            </Label.Effect>
+        </Label>
         <Button Content="Add a New Project" Grid.Column="3" HorizontalAlignment="Left" Height="55" Margin="149,455,0,0" VerticalAlignment="Top" Width="327" Click="Button_Click_3" FontSize="36" FontFamily="Segoe UI Light">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <ListBox Grid.Column="3" HorizontalAlignment="Left" Height="199" Margin="332,213,0,0" VerticalAlignment="Top" Width="440" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}">
+        <ListBox Grid.Column="3" HorizontalAlignment="Left" Height="199" Margin="332,213,0,0" VerticalAlignment="Top" Width="461" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" FontSize="22">
             <ListBox.Effect>
                 <DropShadowEffect/>
             </ListBox.Effect>
         </ListBox>
-        <Label Content="Project You are Managing" Grid.Column="2" HorizontalAlignment="Left" Margin="48,171,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="252" FontSize="20"/>
-        <Label Content="Project You are a Team Member" Grid.Column="3" HorizontalAlignment="Left" Margin="332,171,0,0" VerticalAlignment="Top" Width="309" FontSize="20"/>
+        <Label Content="Project You are Managing" Grid.Column="2" HorizontalAlignment="Left" Margin="48,171,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="306" FontSize="24"/>
+        <Label Content="Project You are a Team Member" Grid.Column="3" HorizontalAlignment="Left" Margin="332,171,0,0" VerticalAlignment="Top" Width="357" FontSize="24"/>
+        <Label Content="Current User:" Grid.Column="1" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" Width="115" FontSize="18" FontFamily="Segoe UI Light" Grid.ColumnSpan="2" FontWeight="Bold" Foreground="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}">
+            <Label.Effect>
+                <DropShadowEffect Color="#FFF9F5F5"/>
+            </Label.Effect>
+        </Label>
+        <TextBlock x:Name="current_txt" Grid.Column="2" HorizontalAlignment="Left" Height="21" Margin="87,9,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="171" FontSize="18" FontFamily="Segoe UI Light" Grid.ColumnSpan="2" FontWeight="Bold" Foreground="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}">
+            <TextBlock.Effect>
+                <DropShadowEffect Color="#FFFBF5F5"/>
+            </TextBlock.Effect>
+        </TextBlock>
 
     </Grid>
 </Window>
