--- a/PMgo/itemWindow.xaml
+++ b/PMgo/itemWindow.xaml
@@ -114,6 +114,15 @@
                 <DropShadowEffect Color="#FFFBF5F5"/>
             </TextBlock.Effect>
         </TextBlock>
+        <Button x:Name="addDocumentButton" Content="Add Document" HorizontalAlignment="Left" Height="34" Margin="1046,509,0,0" VerticalAlignment="Top" Width="132" FontSize="18" Click="addDocumentButton_Click" >
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="White" Offset="0"/>
+                    <GradientStop Color="#FFCF9E9E" Offset="0.996"/>
+                    <GradientStop Color="#FFCDCDCD" Offset="0.67"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
 
     </Grid>
 </Window>
