--- a/PMgo/MainWindow.xaml
+++ b/PMgo/MainWindow.xaml
@@ -41,12 +41,12 @@
         </ListBox>
         <Label Content="Project You are Managing" Grid.Column="2" HorizontalAlignment="Left" Margin="48,171,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="306" FontSize="24"/>
         <Label Content="Project You are a Team Member" Grid.Column="3" HorizontalAlignment="Left" Margin="332,171,0,0" VerticalAlignment="Top" Width="357" FontSize="24"/>
-        <Label Content="Current User:" Grid.Column="1" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" Width="115" FontSize="18" FontFamily="Segoe UI Light" Grid.ColumnSpan="2" FontWeight="Bold" Foreground="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}">
+        <Label Content="Current User:" Grid.Column="1" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" Width="115" FontSize="18" FontFamily="Segoe UI Light" Grid.ColumnSpan="2" FontWeight="Bold" Foreground="#FFFB0C0C">
             <Label.Effect>
                 <DropShadowEffect Color="#FFF9F5F5"/>
             </Label.Effect>
         </Label>
-        <TextBlock x:Name="current_txt" Grid.Column="2" HorizontalAlignment="Left" Height="21" Margin="87,9,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="171" FontSize="18" FontFamily="Segoe UI Light" Grid.ColumnSpan="2" FontWeight="Bold" Foreground="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}">
+        <TextBlock x:Name="current_txt" Grid.Column="2" HorizontalAlignment="Left" Height="21" Margin="77,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="171" FontSize="18" FontFamily="Segoe UI Light" Grid.ColumnSpan="2" FontWeight="Bold" Foreground="#FFFB0C0C">
             <TextBlock.Effect>
                 <DropShadowEffect Color="#FFFBF5F5"/>
             </TextBlock.Effect>
