--- a/PMgo/itemWindow.xaml
+++ b/PMgo/itemWindow.xaml
@@ -104,12 +104,12 @@
         <Button x:Name="completeButton" Content="Complete!" HorizontalAlignment="Left" Height="35" Margin="369,56,0,0" VerticalAlignment="Top" Width="146" Click="Button_Click_2" FontSize="20" Background="#FF129312" FontFamily="Segoe Script"/>
         <Button x:Name="notCompleteButton" Content="Mark Complete" HorizontalAlignment="Left" Height="35" Margin="369,57,0,0" VerticalAlignment="Top" Width="146" Click="Button_Click_2" FontSize="18" Background="#FFE21D13"/>
         <TextBlock x:Name="typeBox" HorizontalAlignment="Left" Height="39" Margin="520,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Visibility="Hidden"/>
-        <Label Content="Current User:" HorizontalAlignment="Left" Margin="6,5,0,0" VerticalAlignment="Top" Width="115" FontSize="18" FontFamily="Segoe UI Light" FontWeight="Bold" Foreground="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}">
+        <Label Content="Current User:" HorizontalAlignment="Left" Margin="6,5,0,0" VerticalAlignment="Top" Width="115" FontSize="18" FontFamily="Segoe UI Light" FontWeight="Bold" Foreground="#FFFB0C0C">
             <Label.Effect>
                 <DropShadowEffect Color="#FFF9F5F5"/>
             </Label.Effect>
         </Label>
-        <TextBlock x:Name="current_txt" HorizontalAlignment="Left" Height="21" Margin="121,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="171" FontSize="18" FontFamily="Segoe UI Light" FontWeight="Bold" Foreground="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}">
+        <TextBlock x:Name="current_txt" HorizontalAlignment="Left" Height="29" Margin="111,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="171" FontSize="18" FontFamily="Segoe UI Light" FontWeight="Bold" Foreground="#FFFB0C0C">
             <TextBlock.Effect>
                 <DropShadowEffect Color="#FFFBF5F5"/>
             </TextBlock.Effect>
