--- a/PMgo/loginWindow.xaml
+++ b/PMgo/loginWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="PMgo.startup"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Provider="clr-namespace:System.Windows.Automation.Provider;assembly=UIAutomationProvider" x:Class="PMgo.startup"
         Title="startup" Height="629.422" Width="1069.493" WindowStartupLocation="CenterScreen" >
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
@@ -17,23 +18,24 @@
                 <GradientStop Color="#FFF8F9F9" Offset="0.979"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <PasswordBox x:Name="passwordField" HorizontalAlignment="Left" Margin="421,302,0,0" VerticalAlignment="Top" Width="291" Height="77" FontSize="20">
+        <PasswordBox x:Name="passwordField" HorizontalAlignment="Left" Margin="421,302,0,0" VerticalAlignment="Top" Width="291" Height="77" FontSize="20" TabIndex="1">
             <PasswordBox.Effect>
                 <DropShadowEffect/>
             </PasswordBox.Effect>
         </PasswordBox>
-        <TextBox x:Name="userEmailField" HorizontalAlignment="Left" Height="76" Margin="421,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" FontSize="20">
+        <TextBox x:Name="userNameField" HorizontalAlignment="Left" Height="76" Margin="421,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" FontSize="20" TextChanged="userNameField_TextChanged" TabIndex="0">
             <TextBox.Effect>
                 <DropShadowEffect/>
             </TextBox.Effect>
         </TextBox>
         <Label Content="Email" HorizontalAlignment="Left" Margin="278,240,0,0" VerticalAlignment="Top" Height="53" Width="119" FontSize="36" FontFamily="Segoe UI Light"/>
         <Label Content="Password" HorizontalAlignment="Left" Margin="238,326,0,0" VerticalAlignment="Top" Height="53" Width="159" FontSize="36" FontFamily="Segoe UI Light"/>
-        <Button Content="Login" HorizontalAlignment="Left" Margin="476,424,0,0" VerticalAlignment="Top" Width="183" Height="87" FontSize="30" Click="Button_Click_1" FontFamily="Segoe UI Light">
+        <Button Content="Login" HorizontalAlignment="Left" Margin="476,424,0,0" VerticalAlignment="Top" Width="183" Height="87" FontSize="30" Click="Button_Click_1" FontFamily="Segoe UI Light" Cursor="Arrow">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
+        
         <Label HorizontalAlignment="Left" Margin="-50,469,0,0" VerticalAlignment="Top"/>
         <Image HorizontalAlignment="Left" Height="196" Margin="66,10,0,0" VerticalAlignment="Top" Width="238" Source="egi-consulting-project-management.jpg"/>
         <Label Content="Welcome to TaskTracker!" HorizontalAlignment="Left" Height="80" Margin="336,47,0,0" VerticalAlignment="Top" Width="623" FontSize="50" FontFamily="Segoe UI Light">
