--- a/PMgo/createDoc.xaml
+++ b/PMgo/createDoc.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PMgo.createDoc"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Upload Document" Height="427" Width="769" WindowStartupLocation="CenterScreen">
+        Title="Upload Document" Height="490" Width="769" WindowStartupLocation="CenterScreen" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
     <Grid>
         <Button Content="Browse" Height="23" HorizontalAlignment="Left" Margin="53,223,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" OpacityMask="#9BE14B19" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="158,63,0,0" x:Name="docName" VerticalAlignment="Top" Width="120" />
