--- a/PMgo/viewDoc.xaml
+++ b/PMgo/viewDoc.xaml
@@ -7,10 +7,11 @@
             <ColumnDefinition Width="12*"/>
             <ColumnDefinition Width="107*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="docName" HorizontalAlignment="Left" Height="31" Margin="38,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="190" Grid.Column="1"/>
-        <TextBlock x:Name="docDesc" HorizontalAlignment="Left" Height="79" Margin="38,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="288" Grid.Column="1"/>
-        <TextBox x:Name="docText" HorizontalAlignment="Left" Height="400" Margin="38,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="428" Grid.Column="1"/>
+        <TextBlock x:Name="docDesc" HorizontalAlignment="Left" Height="58" Margin="38,62,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="288" Grid.Column="1" FontFamily="Segoe UI Semibold"/>
+        <TextBox x:Name="docText" HorizontalAlignment="Left" Height="400" Margin="38,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="428" Grid.Column="1" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
         <TextBox x:Name="locationBox" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="336,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="189" Visibility="Hidden"/>
+        <TextBlock x:Name="docName" Grid.Column="1" HorizontalAlignment="Left" Height="36" Margin="38,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="288" FontSize="22"/>
+        <Button Content="Close" Grid.Column="1" HorizontalAlignment="Left" Height="49" Margin="129,547,0,0" VerticalAlignment="Top" Width="244" FontSize="20" Click="Button_Click_1"/>
 
     </Grid>
 </Window>
